input spacing fix

--- a/web/styles/project/_HomePage.scss
+++ b/web/styles/project/_HomePage.scss
@@ -107,6 +107,7 @@ h2 {
 .sign-up {
     background: #f1f1f1;
     padding-bottom: 15px;
+    margin-top: 5em;
 }
 
 footer.homepage {
